Remove recipe support from main app
